--- a/bin/application/UIDashboard.fxml
+++ b/bin/application/UIDashboard.fxml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import com.jfoenix.controls.JFXRadioButton?>
 <?import javafx.scene.control.Accordion?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Menu?>
 <?import javafx.scene.control.MenuBar?>
 <?import javafx.scene.control.MenuItem?>
-<?import javafx.scene.control.RadioMenuItem?>
 <?import javafx.scene.control.SplitPane?>
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TitledPane?>
@@ -60,37 +60,6 @@
 										<AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="100.0" prefWidth="160.0">
 											<children>
 												<BorderPane fx:id="table" layoutX="143.0" layoutY="68.0" prefHeight="383.0" prefWidth="572.0" style="-fx-background-color: #454545;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-													<top>
-														<MenuBar style="-fx-background-color: #626262;" BorderPane.alignment="CENTER">
-															<menus>
-																<Menu mnemonicParsing="false" text="Folder">
-																	<items>
-																		<MenuItem mnemonicParsing="false" onAction="#newFolder" text="New folder" />
-																	</items>
-																</Menu>
-																<Menu mnemonicParsing="false" text="Image">
-																	<items>
-																		<MenuItem mnemonicParsing="false" onAction="#loadImages" text="Add images" />
-																		<MenuItem mnemonicParsing="false" onAction="#deleteImages" text="Delete image" />
-																	</items>
-																</Menu>
-																<Menu mnemonicParsing="false" text="Help" />
-																<Menu fx:id="viewChoice" mnemonicParsing="false" text="View">
-																	<items>
-																		<RadioMenuItem mnemonicParsing="false" onAction="#view1" selected="true" text="Simple">
-																			<toggleGroup>
-																				<ToggleGroup fx:id="a" />
-																			</toggleGroup>
-																		</RadioMenuItem>
-																		<RadioMenuItem mnemonicParsing="false" onAction="#view4" text="4" toggleGroup="$a" />
-																		<RadioMenuItem mnemonicParsing="false" onAction="#view9" text="9" toggleGroup="$a" />
-																		<RadioMenuItem mnemonicParsing="false" onAction="#view16" text="16" toggleGroup="$a" />
-																		<RadioMenuItem mnemonicParsing="false" onAction="#view25" text="25" toggleGroup="$a" />
-																	</items>
-																</Menu>
-															</menus>
-														</MenuBar>
-													</top>
 													<center>
 														<Button alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" onMouseClicked="#startView" text="Load images" BorderPane.alignment="CENTER" />
 													</center>
@@ -121,12 +90,27 @@
                                              </children>
                                           </Pane>
                                        </right>
+                                       <top>
+                                          <Pane prefHeight="27.0" prefWidth="594.0" BorderPane.alignment="CENTER">
+                                             <children>
+                                                <JFXRadioButton layoutX="15.0" layoutY="5.0" onAction="#view1" prefHeight="17.0" prefWidth="113.0" style="-jfx-unselected-color: white;" text="Simple view" textFill="WHITE">
+                                                   <toggleGroup>
+                                                      <ToggleGroup fx:id="g1" />
+                                                   </toggleGroup>
+                                                </JFXRadioButton>
+                                                <JFXRadioButton layoutX="467.0" layoutY="5.0" onAction="#view25" prefHeight="17.0" prefWidth="113.0" style="-jfx-unselected-color: white;" text="25-view" textFill="WHITE" toggleGroup="$g1" />
+                                                <JFXRadioButton layoutX="128.0" layoutY="5.0" onAction="#view4" prefHeight="17.0" prefWidth="113.0" style="-jfx-unselected-color: white;" text="4-view" textFill="WHITE" toggleGroup="$g1" />
+                                                <JFXRadioButton layoutX="354.0" layoutY="5.0" onAction="#view16" prefHeight="17.0" prefWidth="113.0" selected="true" style="-jfx-unselected-color: white;" text="16-view" textFill="WHITE" toggleGroup="$g1" />
+                                                <JFXRadioButton layoutX="241.0" layoutY="5.0" onAction="#view9" prefHeight="17.0" prefWidth="113.0" style="-jfx-unselected-color: white;" text="9-view" textFill="WHITE" toggleGroup="$g1" />
+                                             </children>
+                                          </Pane>
+                                       </top>
 												</BorderPane>
 											</children>
 										</AnchorPane>
 										<AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="100.0" prefWidth="160.0">
 											<children>
-												<TitledPane animated="false" layoutX="30.0" layoutY="14.0" prefHeight="228.0" prefWidth="594.0" text="Console" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+												<TitledPane animated="false" layoutX="-7.0" prefHeight="228.0" prefWidth="594.0" text="Console" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="-7.0" AnchorPane.rightAnchor="7.0" AnchorPane.topAnchor="0.0">
 													<content>
 														<AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
 															<children>
